@@ -4774,4 +4774,50 @@ ul.followersList .followButtonWrapper {
   margin-left: 80px;
 }
 
+
+/* Tooltip for explain search keywords */
+
+#portal-searchbox .explain-prefix {
+  background-color: #ffffca;
+  display: none;
+  font-size: 0.82em;
+  color: #000023;
+  position: absolute;
+  left: 290px;
+  top: -17px;
+  width: 250px;
+  padding: 0 7px 7px 7px;
+  border-radius: 3px;
+  box-shadow: 0 2px 11px #B4B4B4;
+  float: left;
+  height: auto;
+  z-index: 9999;
+}
+
+#portal-searchbox .explain-prefix:before {
+  width: 11px;
+  height: 11px;
+  left: -14px;
+  top: 21px;
+
+  content: " ";
+  display: block;
+  position: relative;
+
+  border-color: rgba(180, 180, 180, 0.75) rgba(0, 0, 0, 0) rgba(0, 0, 0, 0) rgba(180, 180, 180, 0.75);
+  border-style: solid;
+  border-width: 1px;
+
+  background-color: #ffffca;
+
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+}
+
+#portal-searchbox .explain-prefix p {
+ margin-bottom: 5px;
+}
+
 /* </dtml-with> */
